--- a/boston_housing_price.ipynb
+++ b/boston_housing_price.ipynb
@@ -2143,7 +2143,9 @@
   {
    "cell_type": "markdown",
    "id": "b4dd0eb9-86b9-4fc9-9b10-326b5c187837",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Modelo 1: com todas variáveis independentes"
    ]
@@ -2321,9 +2323,7 @@
   {
    "cell_type": "markdown",
    "id": "73f29f53-4be7-45cd-8a63-d5e01b221671",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Preparação das variáveis independentes e dependente do modelo 2"
    ]
@@ -2495,6 +2495,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "71f090a3-837e-49e6-94b6-7d9433c2b70b",
+   "metadata": {},
+   "source": [
+    "### Função para calcular o VIF\n",
+    "- para otimizar o processo de cálculo do VIF, será criada uma função genérica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "id": "0f208313-5337-460f-83a8-1c02e844605d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vif_calc(X, vif_df):\n",
+    "    for i in range(len(X.columns)):\n",
+    "        vif = variance_inflation_factor(X.values, i)\n",
+    "        vif_df.loc[i, \"VIF\"] = vif\n",
+    "\n",
+    "    return vif_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "158a4a1e-62c3-4c88-afaf-01182a76cedd",
    "metadata": {},
    "source": [
@@ -2502,13 +2526,368 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc23f275-c754-45d5-a48e-c2edd6e39c88",
+   "metadata": {},
+   "source": [
+    "#### Cálculo do VIF e Tolerance para o modelo 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 305,
    "id": "161d9c93-2e8c-40c1-813c-a112361ed4d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vif1 = pd.DataFrame()\n"
+    "# VIF\n",
+    "vif1 = pd.DataFrame()\n",
+    "vif1['feature'] = X1.columns \n",
+    "vif1 = vif_calc(X1, vif1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "id": "a7e40a7b-607f-4ee9-b05d-c94ffd9b534e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tolerance\n",
+    "vif1['tolerance'] = 1/vif1['VIF']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "id": "a0068915-3105-4bd0-90e5-0b58bf62d203",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>VIF</th>\n",
+       "      <th>tolerance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>const</td>\n",
+       "      <td>585.265238</td>\n",
+       "      <td>0.001709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>taxa_crime_p_cidade</td>\n",
+       "      <td>1.792192</td>\n",
+       "      <td>0.557976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>proporcao_terreno_zoneados</td>\n",
+       "      <td>2.298758</td>\n",
+       "      <td>0.435017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>proporcao_negocios_p_cidade</td>\n",
+       "      <td>3.991596</td>\n",
+       "      <td>0.250526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>rio_charles</td>\n",
+       "      <td>1.073995</td>\n",
+       "      <td>0.931103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>concentracao_oxidos_nitricos</td>\n",
+       "      <td>4.393720</td>\n",
+       "      <td>0.227598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>numero_medio_comodos</td>\n",
+       "      <td>1.933744</td>\n",
+       "      <td>0.517131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>proporcao_proprietarios_casas_1940</td>\n",
+       "      <td>3.100826</td>\n",
+       "      <td>0.322495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>distancia_centro_empresarial</td>\n",
+       "      <td>3.955945</td>\n",
+       "      <td>0.252784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>indice_accessibilidade_rodovias</td>\n",
+       "      <td>7.484496</td>\n",
+       "      <td>0.133610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>taxa_imposto</td>\n",
+       "      <td>9.008554</td>\n",
+       "      <td>0.111006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>proporcao_alunos_x_professor_p_cidade</td>\n",
+       "      <td>1.799084</td>\n",
+       "      <td>0.555838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>proporcao_comunidade_negra_p_cidade</td>\n",
+       "      <td>1.348521</td>\n",
+       "      <td>0.741553</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>proporcao_pobreza</td>\n",
+       "      <td>2.941491</td>\n",
+       "      <td>0.339964</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  feature         VIF  tolerance\n",
+       "0                                   const  585.265238   0.001709\n",
+       "1                     taxa_crime_p_cidade    1.792192   0.557976\n",
+       "2              proporcao_terreno_zoneados    2.298758   0.435017\n",
+       "3             proporcao_negocios_p_cidade    3.991596   0.250526\n",
+       "4                             rio_charles    1.073995   0.931103\n",
+       "5            concentracao_oxidos_nitricos    4.393720   0.227598\n",
+       "6                    numero_medio_comodos    1.933744   0.517131\n",
+       "7      proporcao_proprietarios_casas_1940    3.100826   0.322495\n",
+       "8            distancia_centro_empresarial    3.955945   0.252784\n",
+       "9         indice_accessibilidade_rodovias    7.484496   0.133610\n",
+       "10                           taxa_imposto    9.008554   0.111006\n",
+       "11  proporcao_alunos_x_professor_p_cidade    1.799084   0.555838\n",
+       "12    proporcao_comunidade_negra_p_cidade    1.348521   0.741553\n",
+       "13                      proporcao_pobreza    2.941491   0.339964"
+      ]
+     },
+     "execution_count": 317,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exibindo o VIF e Tolerance para cada variável independente do modelo 1\n",
+    "vif1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a125f71-32b2-4e33-b2b1-a7d631dd9e9d",
+   "metadata": {},
+   "source": [
+    "#### Reflexão sobre multicolinearidade do modelo 1:\n",
+    "- As variáveis independentes indice_accessibilidade_rodovias e taxa_imposto apresentam um alto VIF e baixa Tolerance, indicando problemas de multicolinearidade"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22c39773-25a2-45c3-ab57-9f95760ecbff",
+   "metadata": {},
+   "source": [
+    "### Modelo 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "id": "28655db5-f82c-4666-9a5d-31a1c8f69b45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Cálculo do VIF e Tolerance para o modelo 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "id": "f34c55ce-444b-4ab6-a335-511611fc604b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# VIF\n",
+    "vif2 = pd.DataFrame()\n",
+    "vif2['feature'] = X2.columns\n",
+    "vif2 = vif_calc(X2, vif2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 325,
+   "id": "1dab821b-b7fd-4fb2-9385-1012668f1a02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tolerance\n",
+    "vif2['tolerance'] = 1/vif2['VIF']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 327,
+   "id": "2530b476-e716-4155-bdb9-78c71f44c1ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>VIF</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>const</td>\n",
+       "      <td>579.255845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>taxa_crime_p_cidade</td>\n",
+       "      <td>1.789704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>proporcao_terreno_zoneados</td>\n",
+       "      <td>2.239229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>rio_charles</td>\n",
+       "      <td>1.059819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>concentracao_oxidos_nitricos</td>\n",
+       "      <td>3.778011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>numero_medio_comodos</td>\n",
+       "      <td>1.834806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>distancia_centro_empresarial</td>\n",
+       "      <td>3.443420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>indice_accessibilidade_rodovias</td>\n",
+       "      <td>6.861126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>taxa_imposto</td>\n",
+       "      <td>7.272386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>proporcao_alunos_x_professor_p_cidade</td>\n",
+       "      <td>1.757681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>proporcao_comunidade_negra_p_cidade</td>\n",
+       "      <td>1.341559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>proporcao_pobreza</td>\n",
+       "      <td>2.581984</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  feature         VIF\n",
+       "0                                   const  579.255845\n",
+       "1                     taxa_crime_p_cidade    1.789704\n",
+       "2              proporcao_terreno_zoneados    2.239229\n",
+       "3                             rio_charles    1.059819\n",
+       "4            concentracao_oxidos_nitricos    3.778011\n",
+       "5                    numero_medio_comodos    1.834806\n",
+       "6            distancia_centro_empresarial    3.443420\n",
+       "7         indice_accessibilidade_rodovias    6.861126\n",
+       "8                            taxa_imposto    7.272386\n",
+       "9   proporcao_alunos_x_professor_p_cidade    1.757681\n",
+       "10    proporcao_comunidade_negra_p_cidade    1.341559\n",
+       "11                      proporcao_pobreza    2.581984"
+      ]
+     },
+     "execution_count": 327,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exibindo VIF e Tolerance para o modelo 2\n",
+    "vif2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3eef662b-25ae-4e6e-974e-bc16911f3189",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Reflexão sobre multicolinearidade do modelo 2:\n",
+    "- A variáve"
    ]
   }
  ],
