Start api for deploy the model

--- a/boston_housing_price.ipynb
+++ b/boston_housing_price.ipynb
@@ -21,7 +21,9 @@
   {
    "cell_type": "markdown",
    "id": "65a45d13-d9e2-4193-863d-2716099df21b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Conceitos "
    ]
@@ -4466,17 +4468,17 @@
   {
    "cell_type": "markdown",
    "id": "a47d7b1a-1bbd-4378-b9c8-f764e31b9435",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
-    "# Resumo dos modelos criados"
+    "# Comparação dos modelos criados"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "f78a0313-fdec-43a9-bcf3-a30788942bdc",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Com R2 e R2 ajustado"
    ]
@@ -4778,9 +4780,7 @@
   {
    "cell_type": "markdown",
    "id": "4f76765f-17bf-4354-b301-2d9f04afe5b1",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Stepwise nos modelos Box-Cox"
    ]
@@ -4788,7 +4788,9 @@
   {
    "cell_type": "markdown",
    "id": "b4cddf01-7dd9-45de-8a3a-f0549ac73fa4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Stepwise do modelo 1"
    ]
@@ -5025,9 +5027,7 @@
   {
    "cell_type": "markdown",
    "id": "82701aab-2830-4c22-8f65-2afae2ada3f0",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Conclusão\n",
     "- Após aplicação dos conceitos o melhor modelo foi o que teve transformação de Box-Cox. Ele será o modelo que será deployado em cloud.\n",
@@ -5037,20 +5037,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29c11b2b-2347-4191-8b78-a94ac5443d21",
+   "cell_type": "markdown",
+   "id": "dff8f918-94d2-4a5d-b79e-ec82530fdb36",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Extração do Modelo escolhido para deploy"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7396261a-08fd-4690-a1dc-055392c2ab62",
+   "execution_count": 637,
+   "id": "8892b43c-17db-41d2-bad6-d6dffda9ef7d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('model.pkl', 'wb') as f:\n",
+    "    pickle.dump(model, f)"
+   ]
   }
  ],
  "metadata": {
