--- a/jupyter-notebook/boston_housing_price.ipynb
+++ b/jupyter-notebook/boston_housing_price.ipynb
@@ -4475,7 +4475,7 @@
     "### Reflexão sobre os modelos não lineares\n",
     "- Apesar do modelo com log ter demonstrado um pequeno ganho, não demonstrou ser superior aos modelos lineares;\n",
     "- Os demais modelos não lineares, não demonstraram nenhum ganho em relação aos modelos lineares;\n",
-    "- Até este ponto do estudo, mesmo não tendo aderência dos resíduos à normalidade, o melhor modelo é o modelo 2 com box-cox."
+    "- Até este ponto do estudo, mesmo não tendo aderência dos resíduos à normalidade, o melhor modelo é o modelo 2 com box-cox (não linear)."
    ]
   },
   {
@@ -5115,7 +5115,7 @@
    "metadata": {},
    "source": [
     "# Conclusão\n",
-    "- Após aplicação dos conceitos o melhor modelo foi o que teve transformação de Box-Cox. Ele será o modelo que será deployado em cloud.\n",
+    "- Após aplicação dos conceitos o melhor modelo foi o que teve transformação de Box-Cox (não linear). Ele será o modelo que será deployado em cloud.\n",
     "- Observações:\n",
     "    * Mesmo sendoo modelo escolhido, há Heterocedasticidade;\n",
     "    * Existem outliers que não foram tratados nas variávies independentes taxa_crime_p_cidade, proporcao_terreno_zoneados e proporcao_comunidade_negra_p_cidade;\n",
